Widget and navbar dark mode css fixes

--- a/client/src/components/widget/widget.scss
+++ b/client/src/components/widget/widget.scss
@@ -29,6 +29,7 @@
     .link {
       width: max-content;
       font-size: 12px;
+      color: rgb(27, 24, 24);
       border-bottom: 1px solid gray;
     }
 
