--- a/client/src/style/dark.scss
+++ b/client/src/style/dark.scss
@@ -13,13 +13,48 @@
       color: gray;
     }
   }
-
+  .widget{
+    .link {
+      width: max-content;
+      font-size: 12px;
+      color: gray;
+      border-bottom: 1px solid gray;
+    }
+  }
   .navbar {
     color: #999;
     border-color: #333;
 
     .search {
       border-color: gray;
+    }
+    .button {
+      display: inline-block;
+      padding: 0.5rem 1rem;
+      background-color: transparent;
+      color: #fff;
+      border: 1px solid #fff;
+      border-radius: 10px;
+      text-transform: uppercase;
+      letter-spacing: 0.1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+    
+      &:hover {
+        background-color: #fff;
+        color: #000;
+      }
+    }
+    .logout-button {
+      @extend .button;
+      background-color: #111;
+      color: #f20000;
+    
+      &:hover {
+        background-color: #f20000;
+        color: #fff;
+      }
     }
   }
 
